--- a/wishes/src/App.css
+++ b/wishes/src/App.css
@@ -1,6 +1,6 @@
 html{
-  background-image: url('./img/background.png');
-}
+  background: rgb(128,128,128);
+  background: radial-gradient(circle, rgba(128,128,128,1) 0%, rgba(200,200,200,1) 100%, rgba(22,74,84,1) 360%);}
 
 .App {
   text-align: center;
