--- a/wishes/src/Style/SignUp.css
+++ b/wishes/src/Style/SignUp.css
@@ -9,11 +9,12 @@
   display: flex;
   flex-direction: column;
   width: 300px;
-  border: 3px solid black;
+  border: 3px solid rgb(255, 255, 255);
   padding: 0px 30px 10px 30px;
   font-weight: 1000;
   font-size: x-large;
   margin: auto;   
+  border-radius: 5%;
 }
 
 
@@ -27,7 +28,7 @@
 .signUpForm>input {
   margin: 10px 0px 0px 0px;
   height: 25px;
-  background:#FFFFFF;
+  background:#ffffff;
   color: rgb(0, 0, 0);
 }
 
@@ -81,4 +82,8 @@ display: none;
   width: 57px; ;
   background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #FAEA9A;
   border-radius: 9px;
+}
+
+#date{
+  color: #000000;
 }
