--- a/wishes/src/Style/SignUp.css
+++ b/wishes/src/Style/SignUp.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #73aaeb;
+
 }
 
 
@@ -10,18 +12,25 @@
   flex-direction: column;
   width: 300px;
   border: 3px solid black;
-  padding: 0px 30px 10px 30px;
+  /* padding: 0px 30px 10px 30px; */
   font-weight: 1000;
   font-size: x-large;
   margin: auto;   
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
+span> a {
+  font-size: 17px;
+}
 
 .signUpForm>label {
   display: flex;
   flex-direction: column;
   margin: 5px 0px 5px 0px;
   width: 100%;
+  color: #FFFFFF;
+  font-size: medium;
 }
 
 .signUpForm>input {
@@ -31,12 +40,11 @@
   color: rgb(0, 0, 0);
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 600px) {
   .signUpForm {
-      width: 100%;
-      padding: 0px 0px 0px 0px;
-      align-items: center;
-      margin: 0px;
+    width: 100%;
+    margin-left: 30px;
+      margin-right: 30px;
   }
 }
 
@@ -82,3 +90,4 @@ display: none;
   background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #FAEA9A;
   border-radius: 9px;
 }
+
