--- a/wishes/src/App.css
+++ b/wishes/src/App.css
@@ -1,4 +1,4 @@
-html{
+html,body{
   background: rgb(154,182,255);
   background: radial-gradient(circle, rgba(154,182,255,1) 0%, rgba(4,102,255,1) 100%, rgba(22,74,84,1) 360%);
 }
