--- a/wishes/src/Style/Login.css
+++ b/wishes/src/Style/Login.css
@@ -12,7 +12,7 @@ padding-bottom: 50px;
 }
 
 .loginForm > h1 {
-  color: #73aaeb;
+  color: #016ff5;
 }
 .loginForm > label {
     margin-top: 30px;
@@ -29,17 +29,17 @@ padding-bottom: 50px;
   .loginForm  input[type=email],
   .loginForm  input[type=password]
 {
-    height: 20px;
+    height: 25px;
     width: 100%;
 
 }
 
 .loginForm > #LoginButton
 {
-    margin-top: 40px;
-
-    width: 321px;
-height: 27px;
+  margin-top: 40px;
+  font-size: medium;
+  height: 30px;
+      width: 300px;
     background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #FFFFFF;
 border-radius: 9px;
 }
@@ -56,13 +56,15 @@ width: 100%;
 
 }
 
-#signUpButton{
+.loginForm>#signUpButton{
     background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #FAEA9A;
     border-radius: 9px;
-    width: 138px;
-    height: 25px;
+    width: 130px;
+    height: 30px;
 margin-top: 50px;
+font-size: medium;
 }
+
 
 @media only screen and (max-width: 600px) {
     .loginForm  input[type=email],
@@ -72,13 +74,7 @@ margin-top: 50px;
   
   }
 
-  .loginForm > #LoginButton
-{
-      margin-top: 40px;
 
-    width: 200px;
-
-}
 
 .loginForm {
 width: 100%;
