--- a/wishes/src/Style/SingleEvent.css
+++ b/wishes/src/Style/SingleEvent.css
@@ -148,3 +148,45 @@ width:600px
 .addWishIconDiv > img {
     width :35px
 }
+
+.wishesSuggestions{
+    background-color:#aabfda;
+    position: fixed;
+    width: 90%;
+    max-width: 350px;
+    height: 50%;
+    z-index: 5;
+    left: 50%;
+    transform: translate(-50%, 0);
+    top: 20%;
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    overflow: auto;
+    padding: 20px;
+box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.25);
+border-radius: 15px;    
+border:black 1px solid;
+
+
+}
+.wishesSuggestions> p
+{
+    padding: 10px;
+    background: #E6FFF9;
+box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.25);
+border-radius: 15px;    
+text-align: left;
+max-height:fit-content;
+cursor: pointer;
+}
+.wishesSuggestions  img {
+    width: 30px;
+    cursor: pointer;
+}
+.wishesSuggestions div {
+    display: flex;
+flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
