--- a/wishes/src/Style/SingleEvent.css
+++ b/wishes/src/Style/SingleEvent.css
@@ -106,7 +106,7 @@ box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.25);
 box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.25);
 border-radius: 15px;    
 text-align: left;
-min-height:180px;
+min-height:150px;
 max-height:fit-content;
 
 }
@@ -189,4 +189,14 @@ cursor: pointer;
 flex-direction: row;
     justify-content: space-between;
     margin-bottom: 10px;
+}
+.deletigWish{
+    display: flex;
+    flex-direction: row;
+    justify-self: flex-end;
+
+}
+.deletigWish > img {
+    width: 20px;
+    cursor: pointer;
 }
