--- a/wishes/src/Style/UserCard.css
+++ b/wishes/src/Style/UserCard.css
@@ -28,6 +28,26 @@
   width: 90%;
   margin:10px;
 }
+.userCardMainDiv > .information input{
+
+  background: #FFFFFF;
+  box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  width: 90%;
+  margin:10px;
+}
+
+.userCardMainDiv .imageDiv input
+{
+  width: 100%;
+  margin-top: 20px;
+}
+
+.userCardMainDiv .information span {
+  align-self: flex-start;
+  cursor: pointer;
+  margin-top: 20px;
+}
 
 
 .userCardMainDiv img{
