--- a/wishes/src/Style/Events.css
+++ b/wishes/src/Style/Events.css
@@ -2,7 +2,7 @@
     width: 600px;
     margin: auto;
     margin-top: 20px;
-    max-height: 600px;
+    max-height: 95vh;
     overflow-y: scroll;
 }
 .tableDiv tbody>tr {
