--- a/wishes/src/Style/EditEvents.css
+++ b/wishes/src/Style/EditEvents.css
@@ -7,7 +7,7 @@
     border: black 2px solid;
     position: fixed;
     width: 400px;
-    height: 500px;
+    height: 550px;
     z-index: 2;
     left: 50%;
     transform: translate(-50%, 0);
@@ -49,6 +49,16 @@ border-radius: 5px;
             min-height: 180px;
             width: 90%;
         }
+
+
+        .editEvent > .imageInput{
+            width: 100%;
+        }
+        
+
+
+
+
 
 
 @media only screen and (max-width: 400px) {
